# PromptBridge

./: .gitignore  PROJECT_ENGINEERING.md  README.md  TECHNICAL_POSITIONING.md  pyproject.toml
browser_extension/: package-lock.json  package.json  wxt.config.ts
browser_extension/entrypoints/: background.ts
browser_extension/entrypoints/sidepanel/: index.html  main.ts  style.css
browser_extension/lib/: capture-store.ts  captured-context.ts
browser_extension/tests/: captured-context.test.ts
evals/: compiler_eval.py
src/promptbridge/: __init__.py  cli.py  compiler.py  config.py  gateway.py  providers.py  storage.py  utils.py
src/promptbridge/compiler/: __init__.py  reconstruct.py  renderer.py
src/promptbridge/context/: __init__.py  kernel.py  segment_policy.py
src/promptbridge/gateway/: __init__.py  orchestrator.py
src/promptbridge/memory/: __init__.py  dream_compactor.py  files.py  ledger.py
src/promptbridge/retrieval/: __init__.py  exact.py  fts.py  grep.py  router.py  types.py
src/promptbridge/safety/: __init__.py  pii.py
src/promptbridge/targets/: __init__.py  adapters.py
src/promptbridge/traces/: __init__.py  store.py
src/promptbridge/translation/: __init__.py  providers.py  types.py
tests/: test_cli.py  test_compiler.py  test_config.py  test_gateway.py  test_smoke.py  test_storage.py
workspace/memory/: decisions.md  failures.md  glossary.yaml  open_threads.md  project_promptbridge.md  user_profile.md
