[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promptbridge"
version = "0.4.0"
description = "Local-first multilingual gateway with selective prompt compilation and configurable OpenAI-compatible providers."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "PromptBridge" }
]
dependencies = [
  "keyring>=25.0,<26",
]

[project.scripts]
pb = "promptbridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
